# OpenCV_Demo

./: .gitignore
opencv_demo/: CMakeLists.txt  DisplayImage.cpp
opencv_demo/feature2D/Harris/: CMakeLists.txt  Harris.cpp
opencv_demo/highgui/controlAlpha_Beta/: CMakeLists.txt  controlAlpha_beta.cpp
opencv_demo/highgui/createTrackbar/: CMakeLists.txt  createTrackbar.cpp
opencv_demo/img/: CMakeLists.txt  applyColorMap.cpp
opencv_demo/img/GaussianBlur/: CMakeLists.txt  addGaussianBlur.cpp
opencv_demo/img/Laplace/: CMakeLists.txt  Laplace.cpp
opencv_demo/img/Sobel/: CMakeLists.txt  Sobel.cpp
opencv_demo/img/applyColorMap/: CMakeLists.txt  cvtColorMap.cpp
opencv_demo/img/cvtColor/: CMakeLists.txt  cvtColor.cpp
opencv_demo/img/detectPeople/: CMakeLists.txt  DetectPeople.cpp
opencv_demo/img/displayImag/: CMakeLists.txt
opencv_demo/img/equalizeHist/: CMakeLists.txt  equalized.cpp
opencv_demo/img/float/: CMakeLists.txt  canny.cpp
opencv_demo/img/threshold/: CMakeLists.txt
opencv_demo/objdetect/: CMakeLists.txt  detect_Haarcascade.cpp
opencv_demo/objdetect/detectIMG/: detect_Haarcascade.cpp
opencv_demo/objdetect/detectVedio/: CMakeLists.txt  README.md  detectVedio.cpp
opencv_demo/videocapture/: CMakeLists.txt  videoCapture.cpp
